# phd2

./: CMakeLists.txt
shm_guider_lib/: CMakeLists.txt  shm_camera.cpp  shm_camera.h  shm_camera_config.c  shm_camera_config.h  shm_guider.h  shm_mount.cpp  shm_mount.h
src/: cam_ogma.cpp  cam_playerone.cpp  cam_svb.cpp  cam_touptek.cpp  cam_zwo.cpp  camera_config_manager.cpp  camera_config_manager.h  camera_config_monitor.cpp  camera_config_monitor.h  event_server.cpp  gear_dialog.cpp  gear_dialog.h  myframe.cpp  myframe.h  shm_camera.c  shm_camera.cpp  shm_camera.h  shm_camera_example_client.c  shm_camera_example_client.h  shm_camera_integration.cpp  shm_camera_integration.h  shm_monitor.cpp  shm_monitor.h  shm_mount_integration.cpp  shm_mount_integration.h
